# deep_research

./: .gitignore  BACKEND_QUICK_REFERENCE.md  BACKEND_SEPARATION_PLAN.md  README.md  REFACTORING_PLAN.md  REFACTORING_STRUCTURE.md  app.py  config.py  main.py  pyproject.toml  requirements.txt  sample_report.md
app/api/models/: requests.py  responses.py
app/api/routes/: health.py  research.py  sessions.py
app/core/: config.py  graph_factory.py  pipeline.py  session_manager.py
app/services/: research_service.py
backend/: requirements.txt
backend/app/: main.py
backend/app/core/: config.py  graph_factory.py  pipeline.py  session_manager.py
backend/app/services/: research_service.py
backend/src/: config.py  edges.py
backend/src/chains/: __init__.py  builders.py
frontend/: app.py  requirements.txt
frontend/services/: api_client.py
observability/: langfuse_setup.py
services/: __init__.py  api_client.py
src/: __init__.py  chains.py  config.py  edges.py  graph.ipynb  graph.py  nodes.ipynb  nodes.py  prompts.py  trail.py
src/chains/: builders.py
src/components/: chains.py  prompts.py  tools.py
src/graph/: __init__.py  factory.py
src/helpers/: llm.py  logger.py  parsers.py
src/models/: report.py  state.py  tools.py
src/nodes/: __init__.py  research.py  router.py  structure.py  writer.py
src/observability/: langfuse_setup.py
src/prompts/: templates.py
src/tools/: formatter.py  github.py  orchestrator.py  search.py
src/utilities/: LLMProvider.py  app_state.py  config.py  parsers.py  report_state.py  states.py  tools.py
(+32 files in other folders)
