[project]
name = "deep-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langfuse",
    "chainlit>=1.3.2",
    "langchain-community>=0.3.13",
    "langchain>=0.3.13",
    "pydantic==2.10.0",
    "together>=1.3.10",
    "langgraph>=0.2.60",
    "pydantic-settings>=2.7.0",
    "pre-commit>=4.0.1",
    "supabase>=2.11.0",
    "qdrant-client>=1.12.1",
    "sentence-transformers>=3.3.1",
    "notebook",
    "ipykernel",
    "langchain-together",
    "duckduckgo-search",
    "langchain-exa",
    "firecrawl-py>=2.2.0",
    "rich>=13.9.4",
    "pygithub>=2.6.1",
    "arxiv>=2.2.0",
]
